[project]
name = "comfyui_cohere"
description = "This is a node for using cohere (Command R+) from ComfyUI. You need to edit the startup .bat file of ComfyUI and describe the API key obtained from Cohere as follows."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["cohere"]

[project.urls]
Repository = "https://github.com/sugarkwork/comfyui_cohere"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_cohere"
Icon = ""
